          _              __            _   _
 _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__
| '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \
| | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
|_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|
                                          for nga
# RetroForth/nga 2024.4 Release Notes

================================================================

- removed duplicate typedef in tools/retro-muri.c (sevan)

================================================================